--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,3 @@
 PORT=8080
-DB_HOST="mongodb://0.0.0.0:27017/BookDB"
+DB_HOST="mongodb+srv://elizabeth:eliza@bookcluster.2at6ojm.mongodb.net/BookDB?retryWrites=true&w=majority&appName=BookCluster"
 JWT_SECRET="JESUS LOVES YOU"
